# jumpstarter-dev-env

./: .gitignore  .pre-commit-config.yaml  DOCKER-IN-DOCKER.md  Makefile  PRE-COMMIT.md  README.md  kind-config-simple.yaml  kind-config.yaml  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup-dind.sh
.devcontainer/features/jumpstarter-cli/: EXAMPLES.md  README.md  devcontainer-feature.json  install.sh
.devcontainer/features/uv/: README.md  devcontainer-feature.json  install.sh
.github/: COPILOT_INSTRUCTIONS.md  copilot-instructions.md
.github/workflows/: quick-validation.yml  test-jumpstarter-setup.yml
examples/: README.md  create_exporter.py  example-distributed.yaml
scripts/: cleanup-runs.sh  fix-vscode-kubectl.sh  test.sh  welcome.sh
tests/: requirements.txt
tests/robot/: jumpstarter_integration.robot  jumpstarter_tests.robot  robot.cfg
tests/robot/keywords/: kubernetes.robot
tests/robot/resources/: common.robot
