[project]
name = "jumpstarter-examples"
version = "0.1.0"
description = "Jumpstarter Server Development Examples"
requires-python = ">=3.13.7"
dependencies = [
    "jumpstarter-cli",
    "jumpstarter-driver-opendal",
    "jumpstarter-driver-power",
]

[project.optional-dependencies]
testing = [
    "robotframework>=7.3.2",
    "robotframework-requests>=0.9.7",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
    "pre-commit",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']
